# AD

./: .gitignore  Cuda&TrtInstall.md  README.md  requirements.txt
src/control/: CMakeLists.txt  package.xml
src/control/config/: tunable_params.yaml
src/control/include/: MPC.hpp  PathManager.hpp  RoadObject.hpp  constants.h  utility.hpp
src/control/launch/: controller.launch
src/control/scripts/: global_planner2.py
src/control/scripts/config/: paths.yaml
src/control/scripts/maps/: Competition_track_graph_modified_new.graphml  modify_graph.py
src/control/src/: RoadObject.cpp  controller.cpp  controller2.cpp  utility.cpp
src/control/src/deprecated/: controller.cpp  optimizer.cpp
src/localization/: CMakeLists.txt  package.xml
src/localization/launch/: ekf.launch  ukf.launch
src/perception/: CMakeLists.txt  package.xml
src/perception/config/: sign_params.yaml
src/perception/include/: LaneDetector.hpp  SignFastest.hpp  engine.h  yolo-fastestv2.h  yolov8.h
src/perception/include/alglib-cpp/src/: matplotlibcpp.h
src/perception/launch/: cameraNode.launch  cameraNodeReal.launch  cameraNodeRos.launch  signFastest.launch  signTrt.launch
src/perception/models/ncnn/: sissi11-opt.param
src/perception/scripts/: extract_map_info.py  generate_sign_launch.py  gui.py  gui_test.py  map_visualizer.py  map_visualizer_cv2.py  save_frames.py  trt_export.py
src/perception/scripts/assets/: coordinates_with_context.csv  spawn_signs.launch
src/perception/src/: cameraNode.cpp  cameraNodeReal.cpp  cameraNodeRos.cpp  lane.cpp  signFastest.cpp  signTRT.cpp  signTRT2.cpp  videoDetector.cpp  yolo-fastestv2.cpp  yolov8.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/launch/: controller.launch
src/planning/scripts/: find_optimal_path.py  find_optimal_path2.py  global_planner.py  modify_map_graph.py  path2.py
src/planning/scripts/config/: paths.yaml
src/utils/: CMakeLists.txt
src/utils/msg/: IMU.msg  ImgInfo.msg  Lane.msg  Sensors.msg  Sign.msg  localisation.msg  odometry.msg  steering.msg
src/utils/srv/: dotted.srv  get_direction.srv  go_to.srv  goto_command.srv  nav.srv  waypoints.srv
